# seep_3

./: .coverage  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.frontend.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prometheus.yml  requirements.txt  setup.cfg  setup.py  university.db
.github/workflows/: main.yml  tests.yml
front/: package-lock.json  package.json
front/interfaces/: axiosConfig.ts  fetcher.ts
front/src/api/: axiosConfig.js  courseworkAPI.js
front/src/routes/: +page.server.ts  +page.svelte
front/src/routes/coursework/[moduleId]/[courseworkId]/: +page.svelte
front/src/routes/dashboard/: +page.svelte
front/src/routes/login/: +page.svelte
src/: backendapi.py  dbfunctions.py  dbinitializer.py  llm.py  pdfscanner.py  requirements.txt  server.py  test_llm.py  university.db  universitydb.sql
src/FRONT_SEPP_3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/seep_3.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_llm.py
