[metadata]
name = seep_3
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires = 
    langchain
    langchain-core
    langchain-openai
    pydantic
    transformers
    numpy
    scipy
    torch
    pypdf
    pillow
python_requires = >=3.6
package_dir = 
    = src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
seep_3 = py.typed

[flake8]
max-line-length = 160